src/test/compile-fail/feature-gate-no_prelude.rs
#![no_prelude] //~ ERROR: experimental feature: replacement for #![no_implicit_prelude]
               //~^ HELP: feature(no_prelude)

fn main(){}
